Fixed minor visual issue on small screens.

--- a/_src/less/general.less
+++ b/_src/less/general.less
@@ -272,9 +272,6 @@ li.comment, li.pingback {
 			font-size: 2em;
 			margin: 0.5em 0 0 0;
 		}
-		.headline {
-			padding-left: 8em;
-		}
 	}
 
 	footer .social, footer .post-menu {
